src/snapshots/openapi_generator__test_helpers__error_union_test.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(tag = "type")]
pub enum StreamError {
    #[serde(rename = "api_error")]
    ApiError(ApiError),
    #[serde(rename = "validation_error")]
    ValidationError(ValidationError),
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ValidationError {
    pub field: String,
    pub reason: String,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ApiError {
    pub code: i64,
    pub message: String,
}
