src/snapshots/openapi_generator__test_helpers__ideal_const_enum.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, PartialEq, Eq)]
pub enum FlexibleEnum {
    KnownValue1,
    KnownValue2,
    /// Custom or unknown model identifier
    Custom(String),
}
impl<'de> serde::Deserialize<'de> for FlexibleEnum {
    fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    where
        D: serde::Deserializer<'de>,
    {
        let value = String::deserialize(deserializer)?;
        match value.as_str() {
            "known_value_1" => Ok(FlexibleEnum::KnownValue1),
            "known_value_2" => Ok(FlexibleEnum::KnownValue2),
            _ => Ok(FlexibleEnum::Custom(value)),
        }
    }
}
impl serde::Serialize for FlexibleEnum {
    fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
    where
        S: serde::Serializer,
    {
        let value = match self {
            FlexibleEnum::KnownValue1 => "known_value_1",
            FlexibleEnum::KnownValue2 => "known_value_2",
            FlexibleEnum::Custom(s) => s.as_str(),
        };
        serializer.serialize_str(value)
    }
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum SingleValueEnum {
    #[default]
    #[serde(rename = "fixed_value")]
    FixedValue,
}
