src/snapshots/openapi_generator__test_helpers__inline_object_nullable_test.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ResponseWithNullable {
    pub data: Vec<ResponseWithNullableDataItem>,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ResponseWithNullableDataItem {
    pub id: String,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub optional_field: Option<String>,
    pub required_field: String,
}
