src/snapshots/openapi_generator__test_helpers__inline_object_property.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ChatCompletionMessageToolCallChunk {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub function: Option<ChatCompletionMessageToolCallChunkFunction>,
    ///The ID of the tool call
    #[serde(skip_serializing_if = "Option::is_none")]
    pub id: Option<String>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub index: Option<i64>,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ChatCompletionMessageToolCallChunkFunction {
    ///The arguments to call the function with
    #[serde(skip_serializing_if = "Option::is_none")]
    pub arguments: Option<String>,
    ///The name of the function to call
    #[serde(skip_serializing_if = "Option::is_none")]
    pub name: Option<String>,
}
