src/snapshots/openapi_generator__test_helpers__mixed_allof_test.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct MessageWithUsage {
    pub id: String,
    ///Single reference - should be direct
    pub usage: Usage,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct Usage {
    pub input_tokens: i64,
    pub output_tokens: i64,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ExtendedMessage {
    pub content: String,
    pub id: String,
    pub timestamp: String,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct BaseMessage {
    pub content: String,
    pub id: String,
}
