src/snapshots/openapi_generator__test_helpers__mixed_inline_ref_oneof.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct UrlBlock {
    pub url: String,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(tag = "type")]
pub enum Response {
    #[serde(rename = "success")]
    Success(DataBlock),
    #[serde(rename = "error")]
    NamedError(NamedError),
    #[serde(rename = "redirect")]
    Redirect(UrlBlock),
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct NamedError {
    pub code: String,
    pub message: String,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum NamedErrorType {
    #[default]
    #[serde(rename = "error")]
    Error,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct DataBlock {
    pub data: serde_json::Value,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum ResponseType {
    #[default]
    #[serde(rename = "redirect")]
    Redirect,
}
